<resources>
    <string name="app_name">Dir5_3</string>
    <string name="btn_top">위쪽</string>
    <string name="btn_bottom">아래쪽</string>
    <string name="btn_left">왼쪽</string>
    <string name="btn_right">오른쪽</string>
    <string name="btn_center">중앙</string>

    <string name="btn_base">기준 위젯</string>
    <string name="btn1">1번</string>
    <string name="btn2">2번</string>
    <string name="btn3">3번</string>
    <string name="btn4">4번</string>
    <string name="btn5">5번</string>
    <string name="btn6">6번</string>
    <string name="btn7">7번</string>

    <string name="base_btn1">기준1</string>
    <string name="base_btn2">기준2</string>

    <string name="text_phone">전화번호</string>
    <string name="edit_hint">000-0000-0000</string>
    <string name="btn_input">입력</string>
    <string name="btn_cancel">취소</string>
</resources>