<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_base"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:text="@string/btn_base"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/btn_base"
        android:layout_alignTop="@+id/btn_base"
        android:text="@string/btn1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/btn_base"
        android:layout_alignBaseline="@+id/btn_base"
        android:text="@string/btn2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/btn_base"
        android:layout_alignBottom="@+id/btn_base"
        android:text="@string/btn3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_base"
        android:layout_alignLeft="@+id/btn_base"
        android:text="@string/btn4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_base"
        android:layout_alignRight="@+id/btn_base"
        android:text="@string/btn5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/btn_base"
        android:layout_above="@id/btn_base"
        android:text="@string/btn6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_base"
        android:layout_toRightOf="@id/btn_base"
        android:text="@string/btn7" />

</RelativeLayout>