<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginRight="10dp"
        android:text="@string/text_phone" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/text_phone"
        android:layout_alignBaseline="@id/text_phone"
        android:textSize="20sp"
        android:hint="@string/edit_hint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_phone"
        android:layout_toLeftOf="@id/btn_cancel"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:text="@string/btn_input" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_phone"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:text="@string/btn_cancel" />

</RelativeLayout>